# mime_to_ext

./: Cargo.toml  LICENSE-MIT  README.md
data/: mime_db.json
examples/: cli.rs  mime_to_ext.rs
src/: build.rs  cache.rs  lib.rs
