[package]
name = "mime_to_ext"
version = "0.1.9"
edition = "2024"
authors = ["Ganesh Kamlakar Jadhav <ganesh.jadhav16986@gmail.com>"]
description = "Zero-dependency runtime lookup between MIME types and file extensions"
repository = "https://github.com/GaneshJadhavOnGitHub/mime_to_ext"
license = "MIT OR Apache-2.0"
keywords = ["mime", "extension", "content-type", "lookup"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"
homepage = "https://github.com/GaneshJadhavOnGitHub/mime_to_ext"
documentation = "https://docs.rs/mime_to_ext/latest/mime_to_ext/"

include = [
    "/src",
    "/examples",
    "/Cargo.toml",
    "/LICENSE-*",
    "/data/mime_db.json",
]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
once_cell = { version = "1.21", default-features = false, features = ["critical-section"] }
hashbrown = { version = "0.14", default-features = false, features = ["serde", "ahash"] }
ahash = { version = "0.8", default-features = false }

[[example]]
name = "mime_to_ext"
required-features = ["std"]

[features]
std = [] 

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }

